<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniProjectBoleh</string>

    <string-array name="spinner_info">
        <item>-- Pilih info --</item>
        <item>About Me</item>
        <item>My Course</item>
        <item>My Experiences</item>
    </string-array>

    <string name="namaMhs">Nama Mahasiswa</string>
    <string name="nrp">NRP</string>
    <string name="prodi">Program</string>
    <string name="imgMhs">Image Mahasiswa</string>

    <string name="btnBack">Back to the previous page</string>
    <string name="send_email">Send Email</string>
    <string name="night_mode">Night mode on</string>
    <string name="reset_my_friends">Reset My Friends</string>
    <string name="reset">Reset</string>
    <string name="imgDetail">Image Detail</string>
    <string name="namaDetail">Nama Detail</string>
    <string name="nrpDetail">NRP Detail</string>
    <string name="prodiDetail">Prodi Detail</string>

    <string name="rbDSAI">DSAI</string>
    <string name="rbNCS">NCS</string>
    <string name="rbIMES">IMES</string>
    <string name="rbDMT">DMT</string>
    <string name="rbGD">GD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
